<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">마이AI트립</string>

    <string name="default_img_url">https://t1.kakaocdn.net/account_images/default_profile.jpeg.twg.thumb.R640x640</string>
    <string name="text_separate" tools:ignore="ExtraTranslation">|</string>

    <!-- Bottom Navigation Label -->
    <string name="navi_ai">AI 추천</string>
    <string name="navi_map">주변</string>
    <string name="navi_home">홈</string>
    <string name="navi_tour">둘러보기</string>
    <string name="navi_mypage">마이페이지</string>

    <!-- Fragment_home -->
    <string name="popular_tour">인기 관광지</string>
    <string name="location_tour_recommend">지역 별 추천 관광지</string>
    <string name="nearby_tour_recommend">내 주변 추천 관광지</string>
    <string name="view_all">모두 보기</string>

    <!-- Fragment AI -->
    <string name="ai_recommend_tour">AI 추천 여행지</string>
    <string name="sunny">#맑은 날</string>
    <string name="rainy">#흐린 날</string>
    <string name="spring">#봄</string>
    <string name="summer">#여름</string>
    <string name="fall">#가을</string>
    <string name="winter">#겨울</string>
    <string name="latest">최신순</string>
    <string name="seoul">#서울</string>
    <string name="incheon">#인천</string>
    <string name="gyeonggi">#경기도</string>
    <string name="gangwon">#강원도</string>
    <string name="chungcheong">#충청도</string>
    <string name="jeolla">#전라도</string>
    <string name="gyeongsang">#경상도</string>
    <string name="jeju">#제주</string>
    <string-array name="areas">
        <item>서울</item>
        <item>인천</item>
        <item>대전</item>
        <item>대구</item>
        <item>광주</item>
        <item>부산</item>
        <item>울산</item>
        <item>세종</item>
        <item>경기도</item>
        <item>강원도</item>
        <item>충청북도</item>
        <item>충청남도</item>
        <item>경상북도</item>
        <item>경상남도</item>
        <item>전라북도</item>
        <item>전라남도</item>
        <item>제주도</item>
    </string-array>

    <string-array name="areas_home">
        <item>서울</item>
        <item>인천</item>
        <item>경기도</item>
        <item>강원도</item>
        <item>충청도</item>
        <item>전라도</item>
        <item>경상도</item>
        <item>제주</item>
    </string-array>

    <string-array name="categories">
        <item>관광지</item>
        <item>문화시설</item>
        <item>축제공연행사</item>
        <item>레포츠</item>
        <item>숙박</item>
        <item>쇼핑</item>
        <item>음식점</item>
    </string-array>

    <!-- fragment user -->
    <string name="name">엄태경</string>
    <string name="profile">프로필 보기</string>
    <string name="popular">내 좋아요 목록</string>
    <string name="allView">모두 보기</string>
    <string name="diary">내 다이어리 목록</string>

    <string name="like_list_empty">좋아요 목록이 없습니다.</string>
    <string name="diary_list_empty">다이어리 목록이 없습니다.</string>

    <!-- Login -->
    <string name="login_title">My Ai \'Trip</string>
    <string name="login_kakao">카카오로 시작하기</string>

    <!-- Sign Up -->
    <string name="signup_title">회원가입</string>
    <string name="signup_nickname">닉네임 (최대 8글자)</string>
    <string name="signup_submit">완료</string>

    <!-- Gemini -->
    <string name="recommend_rainy">인천 현재 날씨와 현재 시간을 기준으로 인기순 관광지 10개 추천</string>
<!--    <string name="recommend_popular">"%1$s 가장 인기있는 여행지 포인트 150곳 나열. 결과는 지역명 제외하고 여행지 이름만 제공."</string>-->
    <string name="recommend_popular">"%1$s 가장 인기있는 관광지 포인트 150곳 나열. 결과는 관광지 이름만 제공."</string>

    <string name="register_title">회원가입</string>
    <string name="register_nickname_hint">닉네임</string>
    <string name="register_submit">완료</string>
    <string name="register_profile_description">프로필 사진</string>
    <string name="register_profile_subdescription">(선택)</string>
    <string name="helper_register_nickname">특수문자를 제외하고 닉네임을 입력해주세요. 최대 8글자입니다.</string>

    <string name="tour_detail_map">지도로 보기</string>
    <string name="tour_detail_diary">다이어리</string>
    <string name="tour_detail_share">공유하기</string>

    <string name="tour_no_detail">해당 관광지에 대한 정보가 없습니다.</string>

    <string name="diary_bar">다이어리 등록</string>
    <string name="diary_title">다이어리 제목</string>
    <string name="diary_review">다이어리 내용</string>
    <string name="diary_submit">등록하기</string>

    <string name="temperature_normal_format">%1$d°</string>
    <string name="temperature_high_format">최고 %1$d°</string>
    <string name="temperature_low_format">최저 %1$d°</string>
    <string name="humidity_format">습도 %1$d%%</string>
    <string name="rain_probability_format">강수확률 %1$d%%</string>\

    <string name="distance_format">내 위치와 %1$.1fkm 떨어져 있어요!</string>
    <string name="title_tour_detail_by_map">지도로 보기</string>

    <string name="view_search_default">검색할 관광지 이름을 입력해주세요.</string>
</resources>