<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="@dimen/scroll_layout"
        android:layout_height="@dimen/scroll_layout"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/gl_left"
        app:layout_constraintRight_toRightOf="@id/gl_right"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/layout_search"
                layout="@layout/view_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/f_home_tv_margin_top"
                android:text="@string/popular_tour"
                android:textColor="@color/black"
                android:textSize="@dimen/f_home_tv_text_size"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_search" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_popular"
                tools:listitem="@layout/item_full_tour_img_card" />

            <TextView
                android:id="@+id/tv_location_recommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/f_home_tv_margin_top"
                android:text="@string/location_tour_recommend"
                android:textColor="@color/black"
                android:textSize="@dimen/f_home_tv_text_size"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcv_popular" />

            <HorizontalScrollView
                android:id="@+id/hsv_location_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_location_recommend">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_seoul"
                        style="@style/MyCustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/seoul" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_incheon"
                        style="@style/MyCustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/incheon" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_gyeonggi"
                        style="@style/MyCustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gyeonggi" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_gangwon"
                        style="@style/MyCustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gangwon" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_chungcheong"
                        style="@style/MyCustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chungcheong" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_jeolla"
                        style="@style/MyCustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jeolla" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_gyeongsang"
                        style="@style/MyCustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gyeongsang" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_jeju"
                        style="@style/MyCustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jeju" />
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_location_recommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/f_home_rcv_margin_top"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/hsv_location_tag"
                tools:listitem="@layout/item_small_tour_img_card" />

            <TextView
                android:id="@+id/tv_nearby_recommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/f_home_tv_margin_top"
                android:text="@string/nearby_tour_recommend"
                android:textColor="@color/black"
                android:textSize="@dimen/f_home_tv_text_size"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcv_location_recommend" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_nearby_recommend"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@id/tv_nearby_recommend"
                app:layout_constraintTop_toTopOf="@id/tv_nearby_recommend"
                app:srcCompat="@drawable/ic_location" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_nearby_recommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/f_home_rcv_margin_top"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_nearby_recommend"
                tools:listitem="@layout/item_small_tour_img_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>